--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center ;
             background-repeat: no-repeat;
             background-size: cover ;
+            background-attachment: fixed;*/
+
+
+            background: black url('imagens/wallpaper002.jpg')  center center  no-repeat fixed;
+            background-size: cover ;
         }
         main {
             
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border:  1px solid darkblue;
@@ -28,6 +33,13 @@
     <main>
         <h1> teste de imagens de fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quaerat modi aut quasi, explicabo enim voluptate repudiandae eaque vitae distinctio saepe, vel accusantium natus nemo commodi, mollitia magni officia ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quaerat nesciunt. Et sed laudantium velit, eaque dignissimos fugiat, perferendis unde deserunt placeat vel at! Nemo itaque eaque distinctio eos dicta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, quis nostrum? Assumenda nostrum harum laudantium quod ipsum in quis rerum expedita, illum totam minima placeat alias perspiciatis autem atque reiciendis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium debitis natus, iste voluptatum repellat eligendi ratione illo voluptates facere assumenda odit ipsa quam porro veritatis dignissimos obcaecati at et aperiam.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque inventore aspernatur maxime, numquam facere accusantium. Repellat dolorem corrupti officiis voluptatem omnis eveniet accusantium illo consectetur unde. Perferendis, quod magni? Nisi.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit explicabo veniam nisi rerum praesentium doloremque hic tenetur voluptas vitae enim deserunt, accusamus magnam fuga dolorum eius pariatur ullam esse adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe culpa tempora libero, illo repellat, voluptates eius quasi doloremque harum accusamus minus sint odit ut ratione fuga, quidem delectus quae modi? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque recusandae enim temporibus adipisci aperiam, iure illo exercitationem cumque quibusdam? Consequatur soluta in eius assumenda? Expedita odit tempora consequuntur. Hic, temporibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ea rerum laborum quaerat unde facilis natus quibusdam vel quasi consequatur fugiat consectetur, corrupti nisi commodi voluptate hic totam reiciendis voluptatibus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui suscipit, deleniti itaque est iusto perferendis minus, ipsa autem sit aliquid? Aliquid nulla aut magni necessitatibus, eligendi itaque facilis mollitia. 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eaque tempore pariatur nisi veniam ipsum molestiae, ut alias a quaerat explicabo quibusdam corrupti eveniet possimus qui. Vero aliquam cupiditate nostrum.
+        </p>
     </main>
     
 </body>
