--- a/desafios/desafio.12/index.html
+++ b/desafios/desafio.12/index.html
@@ -29,7 +29,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem"id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -66,14 +66,16 @@
 
     
 
-    <section class="imagem">
-        Tenho saudade das cartas <br>
-        Escritas com a própria mão <br>
-        Mandava no mês de Junho <br>
-        Só chegava no Verão <br>
-        Mas matava a saudade <br>
-        Era texto de verdade <br>
-        Nas linhas do coração.
+    <section class="imagem" id="img02">
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do coração.
+        </p>
     </section>
 
 
